renamed cob_settings -> user_settings